2007-09-24  daniel g. siegel  <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese:
	cheese finally got a real website ;)

2007-09-26  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/download.shtml:
	Update latest stable version (2.12.0).

2007-09-23  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

        * www.gnome.org/projects/eog/images/eog-print-preview-screenshot.png:
        * www.gnome.org/projects/eog/images/eog-properties-screenshot.png:
        * www.gnome.org/projects/eog/images/eog-metadata-screenshot.png:
        * www.gnome.org/projects/eog/images/eog-print-preview-screenshot-small.png:
        * www.gnome.org/projects/eog/images/eog-properties-screenshot-small.png:
        * www.gnome.org/projects/eog/images/eog-metadata-screenshot-small.png:

	New screenshots.
	
	* www.gnome.org/projects/eog/images/eog-collection-screenshot-small.png:
	* www.gnome.org/projects/eog/images/eog-collection-screenshot.png:
	* www.gnome.org/projects/eog/images/eog-screenshot.png:
	* www.gnome.org/projects/eog/images/eog-screenshot-small.png:
	* www.gnome.org/projects/eog/screenshots.html:
	
	Updated to reflect the 2.20 release.

2007-09-19  Murray Cumming  <murrayc@murrayc.com>

	* www.gnome.org/index.html: Link to the en version of the release notes, 
	not the C version. The en translation has corrections that happened 
	after the string freeze.

2007-09-19  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/img/flash/Makefile.am: actually install the new banner.

2007-09-19  Lucas Rocha  <lucasr@gnome.org>
	
	* www.gnome.org/index.html: news entry about GNOME 2.20 release.
	* www.gnome.org/img/flash/two-twenty.jpg: GNOME 2.20 front page banner.

2007-09-19  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess: update stable/unstable redirects
	* www.gnome.org/start/2.20/index.wml: improve a bit the sentence so
	that it feels better
	* www.gnome.org/start/index.wml: update stable/unstable redirects
