@@ -1,0 +1,46 @@
+   <div id="appendix">
+      <div id="menu">
+        <h2>Menu</h2>
+        <ul>
+          <li class="current"><a href="index.html">Home</a>
+          <ul>
+            <li><a href="screenshots.html">Screenshots</a> </li>
+            <li><a href="faq.html">FAQ</a> </li>
+            <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
+            <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
+          </ul>
+          </li>
+        </ul>
+          </div>
+          <div id="sidebar">
+
+            <h2 id="toc3">Downloads</h2>
+            <p>Cheese should be installable through your distribution. Don't
+            hesitate to ask for Cheese in your distribution!</p>
+
+            <p>The latest tarball can always be found at the <a
+              href="http://live.gnome.org/Cheese/Releases">download page</a></p>
+
+
+            <h2 id="toc4">Feedback</h2>
+            <p>Bugs should be reported to the <a href="http://bugzilla.gnome.org/">Gnome Bug Tracking System</a>.</p>
+
+            <p>Don't hesitate to test latest <a
+              href="http://svn.gnome.org/viewsvn/cheese/trunk">SVN of Cheese</a> and improve it. Patches welcome !</p>
+
+            <p>Do you want a little discussion about Cheese? Join our <a
+              href="http://mail.gnome.org/mailman/listinfo/cheese-list">mailing list</a></p>
+
+            <h2 id="toc5">"Anti-toc2 and pro-autotools flames"-counter</h2>
+            <p>counter state: 9<br/> (and counting...) ;)</p>
+          </div>
+        </div>
+
+        <div id="footer">
+          <p>
+          <script type="text/javascript">
+            document.write("Updated on: " + document.lastModified );
+          </script>
+          </p>
+        </div>
+
