@@ -38,6 +38,17 @@
   margin: 1ex;
   }
 
+#content p
+{
+  padding: 0 2em 0 4em;
+  }
+
+#content ul
+{
+  padding: 0 2em 0 5em;
+  /*margin: 20em 20.5em 1em 0;*/
+  }
+
 #appendix
 {
   float: right;
