@@ -6,9 +6,7 @@
     <title>Cheese</title>
 
     <link rel="stylesheet" media="all" href="data/themes/gnome/document.all.css" title="Gnome"/>
-
     <link rel="stylesheet" media="screen" href="data/themes/gnome/document.screen.css" title="Gnome"/>
-
     <link rel="stylesheet" media="print" href="data/themes/gnome/document.print.css" title="Gnome"/>
 
   </head>
@@ -32,7 +30,7 @@
       </p>
 
 
-      <h2 id="toc2">What's the status of Cheese?</h2>
+      <h2 id="toc1">What's the status of Cheese?</h2>
       <p>
       Cheese was started as a Google Summer of Code 2007 project lead by daniel
       g. siegel and mentored by Raphaël Slinckx. After a success of the Summer
@@ -49,7 +47,6 @@
 
       <h2 id="toc2">What are the Requirements?</h2>
       <ul>
-        <ul>
           <li>glib-2.0 &gt;= 2.12.0</li>
           <li>gobject-2.0</li>
           <li>gtk+-2.0 &gt;= 2.10.0</li>
@@ -69,56 +66,11 @@
           <li>f-spot for F-Spot export (optional)</li>
           <li>a webcam (a v4l2-webcam is highly recommended)</li>
           <li>a brain</li>
-        </ul>
       </ul>
 
     </div>
 
-    <div id="appendix">
-      <div id="menu">
-        <h2>Menu</h2>
-        <ul>
-          <li class="current"><a href="index.html">Home</a>
-          <ul>
-            <li><a href="screenshots.html">Screenshots</a> </li>
-            <li><a href="faq.html">FAQ</a> </li>
-            <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
-            <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
-          </ul>
-          </li>
-        </ul>
-          </div>
-          <div id="sidebar">
+    <!--#include virtual="appendix.shtml" -->
 
-            <h2 id="toc3">Downloads</h2>
-            <p>Cheese should be installable through your distribution. Don't
-            hesitate to ask for Cheese in your distribution!</p>
-
-            <p>The latest tarball can always be found at the <a
-              href="http://live.gnome.org/Cheese/Releases">download page</a></p>
-
-
-            <h2 id="toc4">Feedback</h2>
-            <p>Bugs should be reported to the <a href="http://bugzilla.gnome.org/">Gnome Bug Tracking System</a>.</p>
-
-            <p>Don't hesitate to test latest <a
-              href="http://svn.gnome.org/viewsvn/cheese/trunk">SVN of Cheese</a> and improve it. Patches welcome !</p>
-
-            <p>Do you want a little discussion about Cheese? Join our <a
-              href="http://mail.gnome.org/mailman/listinfo/cheese-list">mailing list</a></p>
-
-            <h2 id="toc5">"Anti-toc2 and pro-autotools flames"-counter</h2>
-            <p>counter state: 8<br/> (and counting...) ;)</p>
-          </div>
-        </div>
-
-        <div id="footer">
-          <p>
-          <script type="text/javascript">
-            document.write("Updated on: " + document.lastModified );
-          </script>
-          </p> 
-        </div>
-
-      </body>
-    </html>
+  </body>
+</html>
