@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8";?>
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -22,20 +22,28 @@
     <div id="content">
       <div class="album">
         <h2>Screenshots for 0.2.2</h2>
-        <img src="data/screenshots/cheese-0.2.2.jpg">
+        <img src="data/screenshots/cheese-0.2.2.jpg"
+         alt="cheese-0.2.2.jpg" />
         <h2>Screenshots for 0.2.1</h2>
-        <img src="data/screenshots/cheese-0.2.1.jpg">
+        <img src="data/screenshots/cheese-0.2.1.jpg"
+         alt="cheese-0.2.1.jpg" />
         <h2>Screenshots for 0.1.4</h2>
-        <img src="data/screenshots/cheese-0.1.4.jpg">
+        <img src="data/screenshots/cheese-0.1.4.jpg"
+         alt="cheese-0.1.4.jpg" />
         <h2>Screenshots for 0.1.2</h2>
-        <img src="data/screenshots/cheese-0.1.2.jpg">
+        <img src="data/screenshots/cheese-0.1.2.jpg"
+         alt="cheese-0.1.2.jpg" />
         <h2>Screenshots for 0.1.1</h2>
-        <img src="data/screenshots/cheese-0.1.1.jpg">
-        <img src="data/screenshots/cheese-0.1.1_2.jpg">
+        <img src="data/screenshots/cheese-0.1.1.jpg"
+         alt="cheese-0.1.1.jpg" />
+        <img src="data/screenshots/cheese-0.1.1_2.jpg"
+         alt="cheese-0.1.1_2.jpg" />
         <h2>Screenshots for 0.1.0</h2>
-        <img src="data/screenshots/cheese-0.1.0.jpg">
+        <img src="data/screenshots/cheese-0.1.0.jpg"
+         alt="cheese-0.1.0.jpg" />
         <h2>Screenshots for pre 0.1.0</h2>
-        <img src="data/screenshots/cheese-0.1.0.jpg">
+        <img src="data/screenshots/cheese-0.1.0.jpg"
+         alt="cheese-0.1.0.jpg" />
       </div>
 
     </div>
