@@ -1,3 +1,14 @@
+2007-09-28  daniel g. siegel  <dgsiegel@gmail.com>
+
+	* ChangeLog,
+	  www.gnome.org/projects/cheese/appendix.shtml,
+	  www.gnome.org/projects/cheese/data/themes/gnome/document.screen.css,
+	  www.gnome.org/projects/cheese/data/themes/gnome/images/title.png,
+	  www.gnome.org/projects/cheese/data/themes/gnome/images/title.xcf,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/screenshots.html: 
+	  make w3c valid and small cleanup
+
 2007-09-24  daniel g. siegel  <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese:
